Thu Mar 10 11:55:21 2005  Jonathan Blandford  <jrb@redhat.com>

	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
	* freedesktop.org.xml.in: Add OpenDocumentText formats.

2005-01-21  Miloslav Trmac  <mitr@volny.cz>

	* configure.in: Added "nb" (Norwegian (bokmål)) to ALL_LINGUAS.

2005-01-16  Christophe Fergeau  <teuf@gnome.org>

	* configure.in: added it to ALL_LINGUAS

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added many sub-class-of definitions, patch
	by David Faure <faure@kde.org>, fixes #619.

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
	* freedesktop.org.xml.in: fixed malformed XML doc

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: Cleanup for "text executable" types
	(shellscripts and other scripts). Patch from David Faure
	(faure@kde.org), fixes #618.

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: fix vCard and vCalendar mime types and glob
	patterns

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added mime entry for D source files, fixes
	#676

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added audio/wav and audio/vnd.wave aliases
	for wav files, fixes #1885

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: text/xml+html is a subclass of text/xml, not
	text/plain

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: use application/msword as the main type
	for MS/Word files

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: fix entry about DICOM, fixes bug #1310,
	patch from Artur Frysiak <wiget@pld-linux.org>

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: added audio/x-m4a, fixes #584

2004-12-10  Christophe Fergeau  <teuf@gnome.org>

	* freedesktop.org.xml.in: move a few definitions to get an