@@ -138,6 +138,15 @@ command to generate the output files.
     <glob pattern="*.smi"/>
     <glob pattern="*.sml"/>
   </mime-type>
+  <mime-type type="application/stuffit">
+    <_comment>StuffIt archive</_comment>
+    <magic priority="50">
+      <match type="string" value="StuffIt" offset="0"/>
+    </magic>
+    <glob pattern="*.sit"/>
+    <alias type="application/x-stuffit"/>
+    <alias type="application/x-sit"/>
+  </mime-type>
   <mime-type type="application/vnd.corel-draw">
     <_comment>Corel Draw drawing</_comment>
     <magic priority="50">
