@@ -1,3 +1,8 @@
+2005-03-19  Bastien Nocera  <hadess@hadess.net>
+
+	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
+	* freedesktop.org.xml.in: added StuffIt archives
+
 Thu Mar 10 11:55:21 2005  Jonathan Blandford  <jrb@redhat.com>
 
 	* freedesktop.org.xml: sync with freedesktop.org.xml.in content
